fixed spacing issue

--- a/output.css
+++ b/output.css
@@ -579,6 +579,10 @@ video {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -593,6 +597,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.max-w-screen-lg {
+  max-width: 1024px;
 }
 
 .max-w-screen-md {
@@ -899,9 +907,48 @@ section {
   margin: 40px;
 }
 
+@media (min-width: 640px) {
+  .sm\:max-w-screen-lg {
+    max-width: 1024px;
+  }
+
+  .sm\:max-w-screen-xl {
+    max-width: 1280px;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:inline-block {
+    display: inline-block;
+  }
+
+  .md\:inline {
+    display: inline;
+  }
+
+  .md\:hidden {
+    display: none;
+  }
+
+  .md\:max-w-screen-lg {
+    max-width: 1024px;
+  }
+
+  .md\:max-w-screen-md {
+    max-width: 768px;
+  }
+
+  .md\:bg-\[url\(\'Images\/background\.jpeg\'\)\] {
+    background-image: url('Images/background.jpeg');
   }
 
   .md\:text-justify {
